# Poultry-Dairy-Analytics

./: DairyFarm.pbix  codes.ipynb  poultry_health_data.joblib  pyproject.toml  requirement
docs/: index.html  pdf-viewer.html  styles.css  viewer.js
